--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
             <h2>PROFILE</h2>
             <ul class="item-list">
                 <li>
+                    <img src="urushigaki.jpg" alt="漆垣コーチのプロフィール" class="img-item">
+                    <dl>
+                        <dt>漆垣コーチ</dt>
+<!--                         <dd>かわいい</dd> -->
+                    </dl>
+                    <p class="subject">得意科目　全部</p>
+                </li>
+                <li>
                     <img src="okada.jpg" alt="岡田コーチのプロフィール" class="img-item">
                     <dl>
                         <dt>岡田コーチ</dt>
